# MPIre

./: .travis.yml  CHANGELOG  INSTALL.md  Makefile.am  README.md  THANKS  TODO  config.h.in  configure.ac
doc/: Makefile.am  mpire-tutorial.1.md
src/: Makefile.am
src/ccan/ccan/hash/: hash.h
src/mpire/: Makefile.am  mpire.h  mpire_capture.c  mpire_replay.c
tests/: testplan.test
tests/test_Capture/: test.sh
tests/test_Capture/BT/: copy_faces.f  npbparams.h
tests/test_Capture/config/: make.def
tests/test_Replay/: test.sh
tests/test_Replay/IS/: is.c  npbparams.h
tests/test_Replay/config/: make.def
